# molecule

./: .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  Molecule.slnx  README.md  application.go  config.yml  cplus.code-workspace  desktop.code-workspace  dotnet.code-workspace  flutter.code-workspace  go.mod  go.sum  golang.code-workspace  main.go  mobile.code-workspace  multiverse.code-workspace  package-lock.json  server.code-workspace  server.go  vcpkg.json  web.code-workspace  xmake.lua
client/desktop/: .gitignore  CMakeLists.txt  CMakePresets.json
client/desktop/design/Multiverse/: CMakeLists.txt  Multiverse.qmlproject  qmlmodules
client/desktop/module/: FolderListModel.cpp  FolderListModel.h  PictureGridModel.cpp  PictureGridModel.h
client/desktop/module/views/: App.qml  Main.qml
client/desktop/src/: main.cpp
client/desktop/src/business/: AppException.cpp  AppException.h
client/desktop/src/delegates/: FolderDelegate.cpp  FolderDelegate.h
client/desktop/src/providers/: FolderProvider.cpp  (+3 more)
desktop/: .gitignore  CMakeLists.txt  CMakePresets.json  main.cpp  vcpkg.json
desktop/Design/: CMakeLists.txt
desktop/Design/content/: Screen01.ui.qml
desktop/content/: App.qml  Main.qml  Users.qml  list_videos.qml
desktop/content/polaris/: Editor.qml  LibraryItem.qml  Navbar.qml  Page.qml  Sidebar.qml
desktop/content/pulsar/: Page.qml
desktop/content/shaders/: rounded.frag
desktop/content/sources/: LibraryModel.cpp  LibraryModel.h  PartitionModel.cpp  PartitionModel.h  PartitionViewModel.h  PictureGridModel.cpp  PictureGridModel.h  PictureLocationViewModel.cpp  PictureLocationViewModel.h  SASessionListViewModel.cpp  markdown.cpp
desktop/content/venus/: BrowserPage.qml  Location.qml  LocationItem.qml  Navbar.qml  Page.qml
desktop/macos/: WindowController.mm  objc_code.h
desktop/models/: FolderProvider.h  LibraryModel.cpp  PictureGridModel.h  library_model.cpp  library_model.h  sqlite.cpp  sqliteModel.h  videoListModel.h
desktop/modules/: CMakeLists.txt  foo.ixx
desktop/platform/macos/: WindowController.h
desktop/pulsar/business/: CMakeLists.txt  README.md
desktop/services/: LibraryService.cpp  LibraryService.h  MarkdownService.h  SqliteService.cpp  SyncService.cpp  SyncService.h  UserService.cpp  UserService.h  library_service.cpp  library_service.h  markdown_service.cpp  markdown_service.h  sqlite_service.cpp  sqlite_service.h  sync_service.cpp  sync_service.h  user_service.cpp
desktop/tests/: tests.cpp
desktop/threads/: SyncThread.cpp  SyncThread.h
desktop/utils/: base32.h
desktop/venus/delegates/: FolderDelegate.cpp
learning/cmake/openssl_version/: BUILD.md  CMakeLists.txt  main.cc
learning/cplusplus/cpp-apue/: CMakeLists.txt  README.md
learning/cplusplus/cpp-modules/: CMakeLists.txt  README.md  mymod.cpp
learning/cplusplus/cpp-opengl/: CMakeLists.txt  README.md
polaris-server/: .gitignore  CMakeLists.txt
polaris-server/Molecule/Helpers/: IDHelper.cs  QueryHelper.cs
polaris-server/Polaris/: Program.cs  appsettings.json
polaris-server/Polaris.Business/Helpers/: DataContextHelper.cs  MapperHelper.cs
polaris-server/Polaris.Business/Models/: AutoMapperProfile.cs  Channel.cs  CommonResult.cs  DatabaseContext.cs  Model.cs  Picture.cs  Post.cs  Session.cs  Tag.cs
polaris-server/Polaris.Business/Services/: Article.cs  Model.cs
polaris-server/Polaris/Controllers/: AccountController.cs  OAuth2Controller.cs  PicturesController.cs
polaris-web/wasm/: CMakeLists.txt  package.json  wasm.cpp  wasm.h
polaris-web/wasm/browser/: CMakeLists.txt  main.cpp
polaris-web/wasm/server/: main.cpp  package.json
polaris/desktop/: .gitignore  CMakeLists.txt  CMakePresets.json
polaris/desktop/Design/: qmlmodules
polaris/desktop/content/: Main.qml  test.qml
polaris/desktop/src/: CMakeLists.txt  main.cpp
proxima/client/desktop/: CMakeLists.txt
pulsar/: .bazelrc  .gitignore  CMakeLists.txt  CMakePresets.json  Cargo.toml  Package.swift  README.md  pulsar.code-workspace  vcpkg.json
pulsar/Design/: Design.qmlproject.qtds  Design.qmlproject.qtds.fcaf94f
pulsar/Sources/CxxInterop/: main.swift
pulsar/Sources/CxxTest/: CxxTest.cpp  module.modulemap
pulsar/client/web/: .dockerignore  .gitignore  README.md  build.mjs  config.debug.js  config.js  next.config.js  package.json  tsconfig.json
pulsar/common/: BUILD.bazel  CMakeLists.txt  common.def  main.cc
pulsar/common/utils/: md5.cc  md5.h  uuid.cpp
pulsar/desktop/: CMakeLists.txt  main.cpp
pulsar/desktop/models/: FolderListModel.cpp  FolderProvider.cpp  sqliteModel.cc
pulsar/desktop/services/: SqliteService.h
pulsar/main/: main.cpp  process.cpp
pulsar/main/models/: AppException.h  article.cpp  article.h  mail.h
pulsar/main/server/: http_connection.h
pulsar/main/tests/: main.cpp
pulsar/modules/: CMakeLists.txt  foo.cxx
pulsar/native/: CMakeLists.txt
pulsar/server/: BUILD.bazel  CMakeLists.txt  main.cpp
pulsar/server/business/: .gitignore  CMakePresets.json
pulsar/server/common/: CMakeLists.txt  main.cc
pulsar/server/controllers/: article.h  index.cpp  sitemap.cpp
pulsar/server/lib/: CMakeLists.txt  process.cpp  process.h
pulsar/server/main/: CMakeLists.txt
pulsar/server/messaging/: .gitignore  CMakeLists.txt  Makefile
pulsar/server/outdated/: server.h
pulsar/server/server/: http_connection.cpp  server.cpp
pulsar/server/services/: SqliteService.cpp
pulsar/server/src/: process.cpp  process.h  router.cpp
pulsar/server/test/: CMakeLists.txt  main.cpp
pulsar/server/tests/: tests.cpp
pulsar/src/: config.rs  service.rs  utils.rs
pulsar/src/models/: error.rs
pulsar/swift/: CMakeLists.txt
pulsar/venus/: CMakePresets.json
pulsar/web/: .eslintrc.js  .gitignore  CMakeLists.txt  Dockerfile  README.md  main.cpp  package-lock.json  package.json  wasm.cpp  wasm.h
pulsar/xmake/: main.cpp
quantum/src/: CMakeLists.txt  CMakePresets.json  main.cc  quantum.cc  quantum.def  quantum.h
venus/desktop/: .gitignore  CMakeLists.txt  CMakePresets.json
venus/desktop/src/: CMakeLists.txt  main.cpp
web/wasm/server/: CMakeLists.txt
(+2314 files in other folders)
