load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "common",
    srcs = glob([
        "*.cpp",
        "**/*.cpp",
        "*.h",
        "**/*.h",
    ]),
    hdrs = glob([
        "*.h",
        "**/*.h",
    ]),
    includes = [
        "/opt/include",
    ],
    visibility = ["//visibility:public"],
)
